# omnidirectional_four_wheeled_robot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  package.xml
.github/workflows/: ci.yml
config/: controllers.yaml  gz_bridge.yaml  robot.rviz
launch/: display.launch.py  gazebo.launch.py
scripts/: docker_build_and_test.sh  smoke_test.sh
src/: controller_kinematics.cpp  spawner_sphere.cpp
urdf/: camera.urdf.xacro  laser.urdf.xacro  robot.urdf.xacro  sphere.urdf  wheel.urdf.xacro
worlds/: empty.sdf
